Begin adding styles and colours

--- a/index.html
+++ b/index.html
@@ -1,1 +1,42 @@
-# Hello world
+<!doctype html>
+<html lang="en">
+
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <title></title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/normalize.css">
+
+    <!-- Get font from Google Fonts. You probably won’t need all these weights for production. -->
+    <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,900italic,900,700italic,700,600italic,600,400italic,300italic,300,200italic,200' rel='stylesheet' type='text/css'>
+</head>
+
+<body>
+
+    <header class="header" role="banner">
+        <div class="header__wrapper">
+            <h1 class="header__page-title">Leadin Brand Guidelines</h1>
+        </div>
+    </header>
+
+    <main class="content" role="main">
+        <h2>Colours</h2>
+        <ul>
+            <li class="swatch">
+                <h3 class="swatch__heading">Orange</h3>
+                <div class="swatch__circle swatch__circle--orange"></div>
+                <p class="swatch__value">#F8981D</p>
+            </li>
+            <li class="swatch">
+                <h3 class="swatch__heading">Light Grey</h3>
+                <div class="swatch__circle swatch__circle--light-grey"></div>
+                <p class="swatch__value">#EBEEEE</p>
+            </li>
+        </ul>
+    </main>
+</body>
+
+</html>
