--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Leadin Brand Guidelines</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/normalize.css">
 
     <!-- Get font from Google Fonts. You probably won’t need all these weights for production. -->
@@ -18,20 +18,20 @@
 
     <header class="header" role="banner">
         <div class="header__wrapper">
-            <h1 class="header__page-title">Leadin Brand Guidelines</h1>
+            <h1 class="header--heading heading--white heading--xlarge">Leadin Brand Guidelines</h1>
         </div>
     </header>
 
     <main class="content" role="main">
-        <h2>Colours</h2>
+        <h2 class="heading--large">Colours</h2>
         <ul>
             <li class="swatch">
-                <h3 class="swatch__heading">Orange</h3>
+                <h3 class="heading--medium swatch__heading">Orange</h3>
                 <div class="swatch__circle swatch__circle--orange"></div>
                 <p class="swatch__value">#F8981D</p>
             </li>
             <li class="swatch">
-                <h3 class="swatch__heading">Light Grey</h3>
+                <h3 class="heading--medium swatch__heading">Light Grey</h3>
                 <div class="swatch__circle swatch__circle--light-grey"></div>
                 <p class="swatch__value">#EBEEEE</p>
             </li>
