Adding typography and finishing off colours

--- a/index.html
+++ b/index.html
@@ -16,26 +16,94 @@
 
 <body>
 
-    <header class="header" role="banner">
-        <div class="header__wrapper">
-            <h1 class="header--heading heading--white heading--xlarge">Leadin Brand Guidelines</h1>
-        </div>
+    <header class="container" role="banner">
+        <h1 class="heading--xlarge">Leadin Brand Book</h1>
     </header>
 
     <main class="content" role="main">
-        <h2 class="heading--large">Colours</h2>
-        <ul>
-            <li class="swatch">
-                <h3 class="heading--medium swatch__heading">Orange</h3>
-                <div class="swatch__circle swatch__circle--orange"></div>
-                <p class="swatch__value">#F8981D</p>
-            </li>
-            <li class="swatch">
-                <h3 class="heading--medium swatch__heading">Light Grey</h3>
-                <div class="swatch__circle swatch__circle--light-grey"></div>
-                <p class="swatch__value">#EBEEEE</p>
-            </li>
-        </ul>
+        <section>
+            <h2 class="heading--large">Typography</h2>
+            <p>The Leadin font is Source Sans Pro.</p>
+            <p><a href="https://www.google.com/fonts/specimen/Source+Sans+Pro">Download Source Sans Pro from Google Fonts</a>.</p>
+            <div class="example">
+                <p class="heading--xlarge">Heading extra large</p>
+            </div>
+            <div class="example">
+                <p class="heading--large">Heading large</p>
+            </div>
+            <div class="example">
+                <p class="heading--medium">Heading medium</p>
+            </div>
+            <div class="example">
+                <p class="heading--small">Heading small</p>
+            </div>
+
+        </section>
+        <section>
+            <h2 class="heading--large">Colours</h2>
+            <ul>
+                <li class="swatch">
+                    <h3 class="heading--medium swatch__heading">Orange</h3>
+                    <div class="swatch__circle background--orange"></div>
+                    <p class="swatch__value">#F8981D</p>
+                </li>
+                <li class="swatch">
+                    <h3 class="heading--medium swatch__heading">Light Grey</h3>
+                    <div class="swatch__circle background--light-grey"></div>
+                    <p class="swatch__value">#EBEEEE</p>
+                </li>
+                <li class="swatch">
+                    <h3 class="heading--medium swatch__heading">Medium Grey</h3>
+                    <div class="swatch__circle background--medium-grey"></div>
+                    <p class="swatch__value">#90999C</p>
+                </li>
+                <li class="swatch">
+                    <h3 class="heading--medium swatch__heading">Dark Grey</h3>
+                    <div class="swatch__circle background--dark-grey"></div>
+                    <p class="swatch__value">#314249</p>
+                </li>
+                <li class="swatch">
+                    <h3 class="heading--medium swatch__heading">Pink</h3>
+                    <div class="swatch__circle background--pink"></div>
+                    <p class="swatch__value">#F16183</p>
+                </li>
+                <li class="swatch">
+                    <h3 class="heading--medium swatch__heading">Peach</h3>
+                    <div class="swatch__circle background--peach"></div>
+                    <p class="swatch__value">#FE9F82</p>
+                </li>
+                <li class="swatch">
+                    <h3 class="heading--medium swatch__heading">Yellow</h3>
+                    <div class="swatch__circle background--yellow"></div>
+                    <p class="swatch__value">#EACD86</p>
+                </li>
+                <li class="swatch">
+                    <h3 class="heading--medium swatch__heading">Green</h3>
+                    <div class="swatch__circle background--green"></div>
+                    <p class="swatch__value">#5ED789</p>
+                </li>
+                <li class="swatch">
+                    <h3 class="heading--medium swatch__heading">Turquoise</h3>
+                    <div class="swatch__circle background--turquoise"></div>
+                    <p class="swatch__value">#6AD8CB</p>
+                </li>
+                <li class="swatch">
+                    <h3 class="heading--medium swatch__heading">Blue</h3>
+                    <div class="swatch__circle background--blue"></div>
+                    <p class="swatch__value">#3870AD</p>
+                </li>
+                <li class="swatch">
+                    <h3 class="heading--medium swatch__heading">Purple</h3>
+                    <div class="swatch__circle background--purple"></div>
+                    <p class="swatch__value">#9377DF</p>
+                </li>
+                <li class="swatch">
+                    <h3 class="heading--medium swatch__heading">Warm Gray</h3>
+                    <div class="swatch__circle background--warm-grey"></div>
+                    <p class="swatch__value">#898681</p>
+                </li>
+            </ul>
+        </section>
     </main>
 </body>
 
