Adding weights and changing CSS for swatches

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
             <h2 class="heading--large">Typography</h2>
             <p>The Leadin font is Source Sans Pro.</p>
             <p><a href="https://www.google.com/fonts/specimen/Source+Sans+Pro">Download Source Sans Pro from Google Fonts</a>.</p>
+            <h3>Headings</h3>
             <div class="example">
                 <p class="heading--xlarge">Heading extra large</p>
             </div>
@@ -37,72 +38,94 @@
             <div class="example">
                 <p class="heading--small">Heading small</p>
             </div>
-
+            <h3>Weights</h3>
+            <div class="example font-weight--light">
+                <p>Light 300</p>
+                <p>ABCDEFGHIJKLMNOPQRSTUVWXYZÅÄÖÂÀÁ
+                    <br />abcdefghijklmnopqrstuvwxyzåäöâàá
+                    <br />1234567890</p>
+            </div>
+            <div class="example font-weight--regular">
+                <p>Regular 400</p>
+                <p>ABCDEFGHIJKLMNOPQRSTUVWXYZÅÄÖÂÀÁ
+                    <br />abcdefghijklmnopqrstuvwxyzåäöâàá
+                    <br />1234567890</p>
+            </div>
+            <div class="example font-weight--semi-bold">
+                <p>Semi-bold 600</p>
+                <p>ABCDEFGHIJKLMNOPQRSTUVWXYZÅÄÖÂÀÁ
+                    <br />abcdefghijklmnopqrstuvwxyzåäöâàá
+                    <br />1234567890</p>
+            </div>
+            <div class="example font-weight--bold">
+                <p>Bold 700</p>
+                <p>ABCDEFGHIJKLMNOPQRSTUVWXYZÅÄÖÂÀÁ
+                    <br />abcdefghijklmnopqrstuvwxyzåäöâàá
+                    <br />1234567890</p>
+            </div>
         </section>
         <section>
             <h2 class="heading--large">Colours</h2>
-            <ul>
-                <li class="swatch">
-                    <h3 class="heading--medium swatch__heading">Orange</h3>
-                    <div class="swatch__circle background--orange"></div>
-                    <p class="swatch__value">#F8981D</p>
-                </li>
-                <li class="swatch">
-                    <h3 class="heading--medium swatch__heading">Light Grey</h3>
-                    <div class="swatch__circle background--light-grey"></div>
-                    <p class="swatch__value">#EBEEEE</p>
-                </li>
-                <li class="swatch">
-                    <h3 class="heading--medium swatch__heading">Medium Grey</h3>
-                    <div class="swatch__circle background--medium-grey"></div>
-                    <p class="swatch__value">#90999C</p>
-                </li>
-                <li class="swatch">
-                    <h3 class="heading--medium swatch__heading">Dark Grey</h3>
-                    <div class="swatch__circle background--dark-grey"></div>
-                    <p class="swatch__value">#314249</p>
-                </li>
-                <li class="swatch">
-                    <h3 class="heading--medium swatch__heading">Pink</h3>
-                    <div class="swatch__circle background--pink"></div>
-                    <p class="swatch__value">#F16183</p>
-                </li>
-                <li class="swatch">
-                    <h3 class="heading--medium swatch__heading">Peach</h3>
-                    <div class="swatch__circle background--peach"></div>
-                    <p class="swatch__value">#FE9F82</p>
-                </li>
-                <li class="swatch">
-                    <h3 class="heading--medium swatch__heading">Yellow</h3>
-                    <div class="swatch__circle background--yellow"></div>
-                    <p class="swatch__value">#EACD86</p>
-                </li>
-                <li class="swatch">
-                    <h3 class="heading--medium swatch__heading">Green</h3>
-                    <div class="swatch__circle background--green"></div>
-                    <p class="swatch__value">#5ED789</p>
-                </li>
-                <li class="swatch">
-                    <h3 class="heading--medium swatch__heading">Turquoise</h3>
-                    <div class="swatch__circle background--turquoise"></div>
-                    <p class="swatch__value">#6AD8CB</p>
-                </li>
-                <li class="swatch">
-                    <h3 class="heading--medium swatch__heading">Blue</h3>
-                    <div class="swatch__circle background--blue"></div>
-                    <p class="swatch__value">#3870AD</p>
-                </li>
-                <li class="swatch">
-                    <h3 class="heading--medium swatch__heading">Purple</h3>
-                    <div class="swatch__circle background--purple"></div>
-                    <p class="swatch__value">#9377DF</p>
-                </li>
-                <li class="swatch">
-                    <h3 class="heading--medium swatch__heading">Warm Gray</h3>
-                    <div class="swatch__circle background--warm-grey"></div>
-                    <p class="swatch__value">#898681</p>
-                </li>
-            </ul>
+            <div class="example swatch">
+                <p>Orange</p>
+                <div class="swatch__circle background--orange"></div>
+                <p>#F8981D</p>
+            </div>
+            <div class="example swatch">
+                <p>Light Grey</p>
+                <div class="swatch__circle background--light-grey"></div>
+                <p>#EBEEEE</p>
+            </div>
+            <div class="example swatch">
+                <p>Medium Grey</p>
+                <div class="swatch__circle background--medium-grey"></div>
+                <p>#90999C</p>
+            </div>
+            <div class="example swatch">
+                <p>Dark Grey</p>
+                <div class="swatch__circle background--dark-grey"></div>
+                <p>#314249</p>
+            </div>
+            <div class="example swatch">
+                <p>Pink</p>
+                <div class="swatch__circle background--pink"></div>
+                <p>#F16183</p>
+            </div>
+            <div class="example swatch">
+                <p>Peach</p>
+                <div class="swatch__circle background--peach"></div>
+                <p>#FE9F82</p>
+            </div>
+            <div class="example swatch">
+                <p>Yellow</p>
+                <div class="swatch__circle background--yellow"></div>
+                <p>#EACD86</p>
+            </div>
+            <div class="example swatch">
+                <p>Green</p>
+                <div class="swatch__circle background--green"></div>
+                <p>#5ED789</p>
+            </div>
+            <div class="example swatch">
+                <p>Turquoise</p>
+                <div class="swatch__circle background--turquoise"></div>
+                <p>#6AD8CB</p>
+            </div>
+            <div class="example swatch">
+                <p>Blue</p>
+                <div class="swatch__circle background--blue"></div>
+                <p>#3870AD</p>
+            </div>
+            <div class="example swatch">
+                <p>Purple</p>
+                <div class="swatch__circle background--purple"></div>
+                <p>#9377DF</p>
+            </div>
+            <div class="example swatch">
+                <p>Warm Gray</p>
+                <div class="swatch__circle background--warm-grey"></div>
+                <p>#898681</p>
+            </div>
         </section>
     </main>
 </body>
