--- a/index.html
+++ b/index.html
@@ -16,115 +16,141 @@
 
 <body>
 
-    <header class="container" role="banner">
-        <h1 class="heading--xlarge">Leadin Brand Book</h1>
+    <header role="banner">
+        <div class="container">
+            <div class="row clearfix">
+                <h1 class="heading--xlarge">Leadin Brand Book</h1>
+            </div>
+        </div>
     </header>
 
     <main class="content" role="main">
         <section>
-            <h2 class="heading--large">Typography</h2>
-            <p>The Leadin font is Source Sans Pro.</p>
-            <p><a href="https://www.google.com/fonts/specimen/Source+Sans+Pro">Download Source Sans Pro from Google Fonts</a>.</p>
-            <h3>Headings</h3>
-            <div class="example">
-                <p class="heading--xlarge">Heading extra large</p>
-            </div>
-            <div class="example">
-                <p class="heading--large">Heading large</p>
-            </div>
-            <div class="example">
-                <p class="heading--medium">Heading medium</p>
-            </div>
-            <div class="example">
-                <p class="heading--small">Heading small</p>
-            </div>
-            <h3>Weights</h3>
-            <div class="example font-weight--light">
-                <p>Light 300</p>
-                <p>ABCDEFGHIJKLMNOPQRSTUVWXYZÅÄÖÂÀÁ
-                    <br />abcdefghijklmnopqrstuvwxyzåäöâàá
-                    <br />1234567890</p>
-            </div>
-            <div class="example font-weight--regular">
-                <p>Regular 400</p>
-                <p>ABCDEFGHIJKLMNOPQRSTUVWXYZÅÄÖÂÀÁ
-                    <br />abcdefghijklmnopqrstuvwxyzåäöâàá
-                    <br />1234567890</p>
-            </div>
-            <div class="example font-weight--semi-bold">
-                <p>Semi-bold 600</p>
-                <p>ABCDEFGHIJKLMNOPQRSTUVWXYZÅÄÖÂÀÁ
-                    <br />abcdefghijklmnopqrstuvwxyzåäöâàá
-                    <br />1234567890</p>
-            </div>
-            <div class="example font-weight--bold">
-                <p>Bold 700</p>
-                <p>ABCDEFGHIJKLMNOPQRSTUVWXYZÅÄÖÂÀÁ
-                    <br />abcdefghijklmnopqrstuvwxyzåäöâàá
-                    <br />1234567890</p>
+            <div class="container">
+                <div class="row clearfix">
+                    <h2 class="heading--large">Typography</h2>
+                    <p>The Leadin font is Source Sans Pro.</p>
+                    <p><a href="https://www.google.com/fonts/specimen/Source+Sans+Pro">Download Source Sans Pro from Google Fonts</a>.</p>
+                    <h3>Headings</h3>
+                    <div class="example">
+                        <p class="heading--xlarge">Heading extra large</p>
+                    </div>
+                    <div class="example">
+                        <p class="heading--large">Heading large</p>
+                    </div>
+                    <div class="example">
+                        <p class="heading--medium">Heading medium</p>
+                    </div>
+                    <div class="example">
+                        <p class="heading--small">Heading small</p>
+                    </div>
+                </div>
+                <div class="row clearfix">
+                    <h3>Weights</h3>
+                </div>
+                <div class="row clearfix">
+                    <div class="column half">
+                        <div class="example font-weight--light">
+                            <p>Light 300</p>
+                            <p>ABCDEFGHIJKLMNOPQRSTUVWXYZÅÄÖÂÀÁ
+                                <br />abcdefghijklmnopqrstuvwxyzåäöâàá
+                                <br />1234567890</p>
+                        </div>
+                    </div>
+                    <div class="column half">
+                        <div class="example font-weight--regular">
+                            <p>Regular 400</p>
+                            <p>ABCDEFGHIJKLMNOPQRSTUVWXYZÅÄÖÂÀÁ
+                                <br />abcdefghijklmnopqrstuvwxyzåäöâàá
+                                <br />1234567890</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="row clearfix">
+                    <div class="column half">
+                        <div class="example font-weight--semi-bold">
+                            <p>Semi-bold 600</p>
+                            <p>ABCDEFGHIJKLMNOPQRSTUVWXYZÅÄÖÂÀÁ
+                                <br />abcdefghijklmnopqrstuvwxyzåäöâàá
+                                <br />1234567890</p>
+                        </div>
+                    </div>
+                    <div class="column half">
+                        <div class="example font-weight--bold">
+                            <p>Bold 700</p>
+                            <p>ABCDEFGHIJKLMNOPQRSTUVWXYZÅÄÖÂÀÁ
+                                <br />abcdefghijklmnopqrstuvwxyzåäöâàá
+                                <br />1234567890</p>
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
         <section>
-            <h2 class="heading--large">Colours</h2>
-            <div class="example swatch">
-                <p>Orange</p>
-                <div class="swatch__circle background--orange"></div>
-                <p>#F8981D</p>
-            </div>
-            <div class="example swatch">
-                <p>Light Grey</p>
-                <div class="swatch__circle background--light-grey"></div>
-                <p>#EBEEEE</p>
-            </div>
-            <div class="example swatch">
-                <p>Medium Grey</p>
-                <div class="swatch__circle background--medium-grey"></div>
-                <p>#90999C</p>
-            </div>
-            <div class="example swatch">
-                <p>Dark Grey</p>
-                <div class="swatch__circle background--dark-grey"></div>
-                <p>#314249</p>
-            </div>
-            <div class="example swatch">
-                <p>Pink</p>
-                <div class="swatch__circle background--pink"></div>
-                <p>#F16183</p>
-            </div>
-            <div class="example swatch">
-                <p>Peach</p>
-                <div class="swatch__circle background--peach"></div>
-                <p>#FE9F82</p>
-            </div>
-            <div class="example swatch">
-                <p>Yellow</p>
-                <div class="swatch__circle background--yellow"></div>
-                <p>#EACD86</p>
-            </div>
-            <div class="example swatch">
-                <p>Green</p>
-                <div class="swatch__circle background--green"></div>
-                <p>#5ED789</p>
-            </div>
-            <div class="example swatch">
-                <p>Turquoise</p>
-                <div class="swatch__circle background--turquoise"></div>
-                <p>#6AD8CB</p>
-            </div>
-            <div class="example swatch">
-                <p>Blue</p>
-                <div class="swatch__circle background--blue"></div>
-                <p>#3870AD</p>
-            </div>
-            <div class="example swatch">
-                <p>Purple</p>
-                <div class="swatch__circle background--purple"></div>
-                <p>#9377DF</p>
-            </div>
-            <div class="example swatch">
-                <p>Warm Gray</p>
-                <div class="swatch__circle background--warm-grey"></div>
-                <p>#898681</p>
+            <div class="container">
+                <div class="row clearfix">
+                    <h2 class="heading--large">Colours</h2>
+                    <div class="example swatch">
+                        <p>Orange</p>
+                        <div class="swatch__circle background--orange"></div>
+                        <p>#F8981D</p>
+                    </div>
+                    <div class="example swatch">
+                        <p>Light Grey</p>
+                        <div class="swatch__circle background--light-grey"></div>
+                        <p>#EBEEEE</p>
+                    </div>
+                    <div class="example swatch">
+                        <p>Medium Grey</p>
+                        <div class="swatch__circle background--medium-grey"></div>
+                        <p>#90999C</p>
+                    </div>
+                    <div class="example swatch">
+                        <p>Dark Grey</p>
+                        <div class="swatch__circle background--dark-grey"></div>
+                        <p>#314249</p>
+                    </div>
+                    <div class="example swatch">
+                        <p>Pink</p>
+                        <div class="swatch__circle background--pink"></div>
+                        <p>#F16183</p>
+                    </div>
+                    <div class="example swatch">
+                        <p>Peach</p>
+                        <div class="swatch__circle background--peach"></div>
+                        <p>#FE9F82</p>
+                    </div>
+                    <div class="example swatch">
+                        <p>Yellow</p>
+                        <div class="swatch__circle background--yellow"></div>
+                        <p>#EACD86</p>
+                    </div>
+                    <div class="example swatch">
+                        <p>Green</p>
+                        <div class="swatch__circle background--green"></div>
+                        <p>#5ED789</p>
+                    </div>
+                    <div class="example swatch">
+                        <p>Turquoise</p>
+                        <div class="swatch__circle background--turquoise"></div>
+                        <p>#6AD8CB</p>
+                    </div>
+                    <div class="example swatch">
+                        <p>Blue</p>
+                        <div class="swatch__circle background--blue"></div>
+                        <p>#3870AD</p>
+                    </div>
+                    <div class="example swatch">
+                        <p>Purple</p>
+                        <div class="swatch__circle background--purple"></div>
+                        <p>#9377DF</p>
+                    </div>
+                    <div class="example swatch">
+                        <p>Warm Gray</p>
+                        <div class="swatch__circle background--warm-grey"></div>
+                        <p>#898681</p>
+                    </div>
+                </div>
             </div>
         </section>
     </main>
