--- a/index.html
+++ b/index.html
@@ -90,36 +90,52 @@
             <div class="container">
                 <div class="row clearfix">
                     <h2 class="heading--large">Colours</h2>
-                    <div class="example swatch">
-                        <p>Orange</p>
-                        <div class="swatch__circle background--orange"></div>
-                        <p>#F8981D</p>
+                </div>
+                <div class="row clearfix">
+                    <div class="column sixth">
+                        <div class="example swatch">
+                            <p>Orange</p>
+                            <div class="swatch__circle background--orange"></div>
+                            <p>#F8981D</p>
+                        </div>
                     </div>
-                    <div class="example swatch">
-                        <p>Light Grey</p>
-                        <div class="swatch__circle background--light-grey"></div>
-                        <p>#EBEEEE</p>
+                    <div class="column sixth">
+                        <div class="example swatch">
+                            <p>Light Grey</p>
+                            <div class="swatch__circle background--light-grey"></div>
+                            <p>#EBEEEE</p>
+                        </div>
                     </div>
-                    <div class="example swatch">
-                        <p>Medium Grey</p>
-                        <div class="swatch__circle background--medium-grey"></div>
-                        <p>#90999C</p>
+                    <div class="column sixth">
+                        <div class="example swatch">
+                            <p>Medium Grey</p>
+                            <div class="swatch__circle background--medium-grey"></div>
+                            <p>#90999C</p>
+                        </div>
                     </div>
-                    <div class="example swatch">
-                        <p>Dark Grey</p>
-                        <div class="swatch__circle background--dark-grey"></div>
-                        <p>#314249</p>
+                    <div class="column sixth">
+                        <div class="example swatch">
+                            <p>Dark Grey</p>
+                            <div class="swatch__circle background--dark-grey"></div>
+                            <p>#314249</p>
+                        </div>
                     </div>
-                    <div class="example swatch">
-                        <p>Pink</p>
-                        <div class="swatch__circle background--pink"></div>
-                        <p>#F16183</p>
+                    <div class="column sixth">
+                        <div class="example swatch">
+                            <p>Pink</p>
+                            <div class="swatch__circle background--pink"></div>
+                            <p>#F16183</p>
+                        </div>
                     </div>
-                    <div class="example swatch">
-                        <p>Peach</p>
-                        <div class="swatch__circle background--peach"></div>
-                        <p>#FE9F82</p>
+                    <div class="column sixth">
+                        <div class="example swatch">
+                            <p>Peach</p>
+                            <div class="swatch__circle background--peach"></div>
+                            <p>#FE9F82</p>
+                        </div>
                     </div>
+                </div>
+                <div class="row clearfix">
                     <div class="example swatch">
                         <p>Yellow</p>
                         <div class="swatch__circle background--yellow"></div>
