--- a/index.html
+++ b/index.html
@@ -17,16 +17,16 @@
 <body>
 
     <header role="banner">
-        <div class="container">
+        <div class="container header background--dark-grey">
             <div class="row clearfix">
-                <h1 class="heading--xlarge">Leadin Brand Book</h1>
+                <h1 class="heading--xlarge header__title font-color--white font-weight--light">Leadin Brand Book</h1>
             </div>
         </div>
     </header>
 
     <main class="content" role="main">
         <section>
-            <div class="container">
+            <div class="container container--border">
                 <div class="row clearfix">
                     <h2 class="heading--large">Typography</h2>
                     <p>The Leadin font is Source Sans Pro.</p>
@@ -87,7 +87,7 @@
             </div>
         </section>
         <section>
-            <div class="container">
+            <div class="container container--border">
                 <div class="row clearfix">
                     <h2 class="heading--large">Colours</h2>
                 </div>
@@ -136,35 +136,47 @@
                     </div>
                 </div>
                 <div class="row clearfix">
-                    <div class="example swatch">
-                        <p>Yellow</p>
-                        <div class="swatch__circle background--yellow"></div>
-                        <p>#EACD86</p>
+                    <div class="column sixth">
+                        <div class="example swatch">
+                            <p>Yellow</p>
+                            <div class="swatch__circle background--yellow"></div>
+                            <p>#EACD86</p>
+                        </div>
                     </div>
-                    <div class="example swatch">
-                        <p>Green</p>
-                        <div class="swatch__circle background--green"></div>
-                        <p>#5ED789</p>
+                    <div class="column sixth">
+                        <div class="example swatch">
+                            <p>Green</p>
+                            <div class="swatch__circle background--green"></div>
+                            <p>#5ED789</p>
+                        </div>
                     </div>
-                    <div class="example swatch">
-                        <p>Turquoise</p>
-                        <div class="swatch__circle background--turquoise"></div>
-                        <p>#6AD8CB</p>
+                    <div class="column sixth">
+                        <div class="example swatch">
+                            <p>Turquoise</p>
+                            <div class="swatch__circle background--turquoise"></div>
+                            <p>#6AD8CB</p>
+                        </div>
                     </div>
-                    <div class="example swatch">
-                        <p>Blue</p>
-                        <div class="swatch__circle background--blue"></div>
-                        <p>#3870AD</p>
+                    <div class="column sixth">
+                        <div class="example swatch">
+                            <p>Blue</p>
+                            <div class="swatch__circle background--blue"></div>
+                            <p>#3870AD</p>
+                        </div>
                     </div>
-                    <div class="example swatch">
-                        <p>Purple</p>
-                        <div class="swatch__circle background--purple"></div>
-                        <p>#9377DF</p>
+                    <div class="column sixth">
+                        <div class="example swatch">
+                            <p>Purple</p>
+                            <div class="swatch__circle background--purple"></div>
+                            <p>#9377DF</p>
+                        </div>
                     </div>
-                    <div class="example swatch">
-                        <p>Warm Gray</p>
-                        <div class="swatch__circle background--warm-grey"></div>
-                        <p>#898681</p>
+                    <div class="column sixth">
+                        <div class="example swatch">
+                            <p>Warm Gray</p>
+                            <div class="swatch__circle background--warm-grey"></div>
+                            <p>#898681</p>
+                        </div>
                     </div>
                 </div>
             </div>
