Adding intro and linking brand book

--- a/index.html
+++ b/index.html
@@ -25,6 +25,22 @@
     </header>
 
     <main class="content" role="main">
+      <section>
+          <div class="container background--light-grey">
+              <div class="row clearfix">
+                  <h2 class="heading--large">Introduction</h2>
+                  <p>A brand book and front-end style guide for Leadin.</p>
+                  <p><a href="/files/leadin_brand_book_official.pdf">Download Leadin Brand Book (PDF, 1.8MB)</a></p>
+              </div>
+          </div>
+      </section>
+        <section>
+            <div class="container container--border">
+                <div class="row clearfix">
+                    <h2 class="heading--large">Logo</h2>
+                </div>
+            </div>
+        </section>
         <section>
             <div class="container container--border">
                 <div class="row clearfix">
@@ -173,7 +189,7 @@
                     </div>
                     <div class="column sixth">
                         <div class="example swatch">
-                            <p>Warm Gray</p>
+                            <p>Warm Grey</p>
                             <div class="swatch__circle background--warm-grey"></div>
                             <p>#898681</p>
                         </div>
