--- a/index.html
+++ b/index.html
@@ -19,50 +19,82 @@
     <header role="banner">
         <div class="container header background--dark-grey">
             <div class="row clearfix">
-                <h1 class="heading--xlarge header__title font-color--white font-weight--light">Leadin Brand Book</h1>
+                <div class="column">
+                    <h1 class="heading--xlarge header__title font-color--white font-weight--light">Leadin Brand Book</h1>
+                </div>
             </div>
         </div>
     </header>
 
     <main class="content" role="main">
-      <section>
-          <div class="container background--light-grey">
-              <div class="row clearfix">
-                  <h2 class="heading--large">Introduction</h2>
-                  <p>A brand book and front-end style guide for Leadin.</p>
-                  <p><a href="/files/leadin_brand_book_official.pdf">Download Leadin Brand Book (PDF, 1.8MB)</a></p>
-              </div>
-          </div>
-      </section>
         <section>
-            <div class="container container--border">
+            <div class="container background--light-grey">
                 <div class="row clearfix">
-                    <h2 class="heading--large">Logo</h2>
+                    <div class="column">
+                        <h2 class="heading--large">Introduction</h2>
+                        <p>A brand book and front-end style guide for Leadin.</p>
+                        <p><a href="/files/leadin_brand_book_official.pdf">Download Leadin Brand Book (PDF, 1.8MB)</a></p>
+                    </div>
                 </div>
             </div>
         </section>
         <section>
             <div class="container container--border">
                 <div class="row clearfix">
-                    <h2 class="heading--large">Typography</h2>
-                    <p>The Leadin font is Source Sans Pro.</p>
-                    <p><a href="https://www.google.com/fonts/specimen/Source+Sans+Pro">Download Source Sans Pro from Google Fonts</a>.</p>
-                    <h3>Headings</h3>
-                    <div class="example">
-                        <p class="heading--xlarge">Heading extra large</p>
-                    </div>
-                    <div class="example">
-                        <p class="heading--large">Heading large</p>
-                    </div>
-                    <div class="example">
-                        <p class="heading--medium">Heading medium</p>
-                    </div>
-                    <div class="example">
-                        <p class="heading--small">Heading small</p>
+                    <div class="column">
+                        <h2 class="heading--large">Logo</h2>
                     </div>
                 </div>
                 <div class="row clearfix">
-                    <h3>Weights</h3>
+                    <div class="column quarter">
+                        <div class="example">
+                            <img src="img/logo-white-on-orange.png" alt="White text on orange background logo">
+                        </div>
+                    </div>
+                    <div class="column quarter">
+                        <div class="example">
+                            <img src="img/logo-white-on-dark-grey.png" alt="White text on dark grey background logo">
+                        </div>
+                    </div>
+                    <div class="column quarter">
+                        <div class="example">
+                            <img src="img/logo-orange-on-white.png" alt="Orange text on white background logo">
+                        </div>
+                    </div>
+                    <div class="column quarter">
+                        <div class="example">
+                            <img src="img/logo-dark-grey-on-white.png" alt="Dark grey text on white background logo">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section>
+            <div class="container container--border">
+                <div class="row clearfix">
+                    <div class="column">
+                        <h2 class="heading--large">Typography</h2>
+                        <p>The Leadin font is Source Sans Pro.</p>
+                        <p><a href="https://www.google.com/fonts/specimen/Source+Sans+Pro">Download Source Sans Pro from Google Fonts</a>.</p>
+                        <h3>Headings</h3>
+                        <div class="example">
+                            <p class="heading--xlarge">Heading extra large</p>
+                        </div>
+                        <div class="example">
+                            <p class="heading--large">Heading large</p>
+                        </div>
+                        <div class="example">
+                            <p class="heading--medium">Heading medium</p>
+                        </div>
+                        <div class="example">
+                            <p class="heading--small">Heading small</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="row clearfix">
+                    <div class="column">
+                        <h3>Weights</h3>
+                    </div>
                 </div>
                 <div class="row clearfix">
                     <div class="column half">
@@ -105,7 +137,9 @@
         <section>
             <div class="container container--border">
                 <div class="row clearfix">
-                    <h2 class="heading--large">Colours</h2>
+                    <div class="column">
+                        <h2 class="heading--large">Colours</h2>
+                    </div>
                 </div>
                 <div class="row clearfix">
                     <div class="column sixth">
