Adding heading sizes

--- a/index.html
+++ b/index.html
@@ -75,25 +75,34 @@
                     <div class="column">
                         <h2 class="heading--large">Typography</h2>
                         <p>The Leadin font is Source Sans Pro.</p>
-                        <p><a href="https://www.google.com/fonts/specimen/Source+Sans+Pro">Download Source Sans Pro from Google Fonts</a>.</p>
-                        <h3>Headings</h3>
+                        <p><a href="https://www.google.com/fonts/specimen/Source+Sans+Pro">Get Source Sans Pro from Google Fonts</a>.</p>
                         <div class="example">
-                            <p class="heading--xlarge">Heading extra large</p>
+                            <p class="heading--xxlarge"><span class="font-weight--light">01</span> <span class="font-weight--regular">02</span> <span class="font-weight--semi-bold">03</span> <span class="font-weight--bold">04</span></p>
                         </div>
                         <div class="example">
-                            <p class="heading--large">Heading large</p>
+                            <p class="heading--xxlarge"><span class="font-weight--light">Aa</span> <span class="font-weight--regular">Bb</span> <span class="font-weight--semi-bold">Cc</span> <span class="font-weight--bold">Dd</span></p>
+                        </div>
+                        <h3  class="heading--medium">Sizes</h3>
+                        <div class="example">
+                            <p class="heading--xlarge">Extra large heading</p>
                         </div>
                         <div class="example">
-                            <p class="heading--medium">Heading medium</p>
+                            <p class="heading--large">Large heading</p>
                         </div>
                         <div class="example">
-                            <p class="heading--small">Heading small</p>
+                            <p class="heading--medium">Medium heading</p>
+                        </div>
+                        <div class="example">
+                            <p class="heading--small">Small heading</p>
+                        </div>
+                        <div class="example">
+                            <p>Body</p>
                         </div>
                     </div>
                 </div>
                 <div class="row clearfix">
                     <div class="column">
-                        <h3>Weights</h3>
+                        <h3  class="heading--medium">Weights</h3>
                     </div>
                 </div>
                 <div class="row clearfix">
