--- a/index.html
+++ b/index.html
@@ -22,8 +22,11 @@
                 <div class="column">
                     <h1 class="heading--xlarge header__title font-color--white font-weight--light">Leadin Brand Book</h1>
                 </div>
+                <!-- End of column -->
             </div>
+            <!-- End of row -->
         </div>
+        <!-- End of container -->
     </header>
 
     <main class="content" role="main">
@@ -35,8 +38,11 @@
                         <p>A brand book and front-end style guide for Leadin.</p>
                         <p><a href="/files/leadin_brand_book_official.pdf">Download Leadin Brand Book (PDF, 1.8MB)</a></p>
                     </div>
+                    <!-- End of column -->
                 </div>
+                <!-- End of row -->
             </div>
+            <!-- End of container -->
         </section>
         <section>
             <div class="container container--border">
@@ -44,30 +50,42 @@
                     <div class="column">
                         <h2 class="heading--large">Logo</h2>
                     </div>
+                    <!-- End of column -->
                 </div>
+                <!-- End of row -->
                 <div class="row clearfix">
                     <div class="column quarter">
                         <div class="example">
                             <img src="img/logo-white-on-orange.png" alt="White text on orange background logo">
                         </div>
+                        <!-- End of example -->
                     </div>
+                    <!-- End of column -->
                     <div class="column quarter">
                         <div class="example">
                             <img src="img/logo-white-on-dark-grey.png" alt="White text on dark grey background logo">
                         </div>
+                        <!-- End of example -->
                     </div>
+                    <!-- End of column -->
                     <div class="column quarter">
                         <div class="example">
                             <img src="img/logo-orange-on-white.png" alt="Orange text on white background logo">
                         </div>
+                        <!-- End of example -->
                     </div>
+                    <!-- End of column -->
                     <div class="column quarter">
                         <div class="example">
                             <img src="img/logo-dark-grey-on-white.png" alt="Dark grey text on white background logo">
                         </div>
+                        <!-- End of example -->
                     </div>
+                    <!-- End of column -->
                 </div>
+                <!-- End of row -->
             </div>
+            <!-- End of container -->
         </section>
         <section>
             <div class="container container--border">
@@ -79,32 +97,43 @@
                         <div class="example">
                             <p class="heading--xxlarge"><span class="font-weight--light">01</span> <span class="font-weight--regular">02</span> <span class="font-weight--semi-bold">03</span> <span class="font-weight--bold">04</span></p>
                         </div>
+                        <!-- End of example -->
                         <div class="example">
                             <p class="heading--xxlarge"><span class="font-weight--light">Aa</span> <span class="font-weight--regular">Bb</span> <span class="font-weight--semi-bold">Cc</span> <span class="font-weight--bold">Dd</span></p>
                         </div>
-                        <h3  class="heading--medium">Sizes</h3>
+                        <!-- End of example -->
+                        <h3 class="heading--medium">Sizes</h3>
                         <div class="example">
                             <p class="heading--xlarge">Extra large heading</p>
                         </div>
+                        <!-- End of example -->
                         <div class="example">
                             <p class="heading--large">Large heading</p>
                         </div>
+                        <!-- End of example -->
                         <div class="example">
                             <p class="heading--medium">Medium heading</p>
                         </div>
+                        <!-- End of example -->
                         <div class="example">
                             <p class="heading--small">Small heading</p>
                         </div>
+                        <!-- End of example -->
                         <div class="example">
                             <p>Body</p>
                         </div>
+                        <!-- End of example -->
                     </div>
+                    <!-- End of column -->
                 </div>
+                <!-- End of row -->
                 <div class="row clearfix">
                     <div class="column">
-                        <h3  class="heading--medium">Weights</h3>
+                        <h3 class="heading--medium">Weights</h3>
                     </div>
+                    <!-- End of column -->
                 </div>
+                <!-- End of row -->
                 <div class="row clearfix">
                     <div class="column half">
                         <div class="example font-weight--light">
@@ -113,7 +142,9 @@
                                 <br />abcdefghijklmnopqrstuvwxyzåäöâàá
                                 <br />1234567890</p>
                         </div>
+                        <!-- End of example -->
                     </div>
+                    <!-- End of column -->
                     <div class="column half">
                         <div class="example font-weight--regular">
                             <p>Regular 400</p>
@@ -121,8 +152,11 @@
                                 <br />abcdefghijklmnopqrstuvwxyzåäöâàá
                                 <br />1234567890</p>
                         </div>
+                        <!-- End of example -->
                     </div>
+                    <!-- End of column -->
                 </div>
+                <!-- End of row -->
                 <div class="row clearfix">
                     <div class="column half">
                         <div class="example font-weight--semi-bold">
@@ -131,7 +165,9 @@
                                 <br />abcdefghijklmnopqrstuvwxyzåäöâàá
                                 <br />1234567890</p>
                         </div>
+                        <!-- End of example -->
                     </div>
+                    <!-- End of column -->
                     <div class="column half">
                         <div class="example font-weight--bold">
                             <p>Bold 700</p>
@@ -139,9 +175,13 @@
                                 <br />abcdefghijklmnopqrstuvwxyzåäöâàá
                                 <br />1234567890</p>
                         </div>
+                        <!-- End of example -->
                     </div>
+                    <!-- End of column -->
                 </div>
+                <!-- End of row -->
             </div>
+            <!-- End of container -->
         </section>
         <section>
             <div class="container container--border">
@@ -149,7 +189,9 @@
                     <div class="column">
                         <h2 class="heading--large">Colours</h2>
                     </div>
+                    <!-- End of exacolumnmple -->
                 </div>
+                <!-- End of row -->
                 <div class="row clearfix">
                     <div class="column sixth">
                         <div class="example swatch">
@@ -157,43 +199,56 @@
                             <div class="swatch__circle background--orange"></div>
                             <p>#F8981D</p>
                         </div>
+                        <!-- End of example -->
                     </div>
+                    <!-- End of column -->
                     <div class="column sixth">
                         <div class="example swatch">
                             <p>Light Grey</p>
                             <div class="swatch__circle background--light-grey"></div>
                             <p>#EBEEEE</p>
                         </div>
+                        <!-- End of example -->
                     </div>
+                    <!-- End of column -->
                     <div class="column sixth">
                         <div class="example swatch">
                             <p>Medium Grey</p>
                             <div class="swatch__circle background--medium-grey"></div>
                             <p>#90999C</p>
                         </div>
+                        <!-- End of example -->
                     </div>
+                    <!-- End of column -->
                     <div class="column sixth">
                         <div class="example swatch">
                             <p>Dark Grey</p>
                             <div class="swatch__circle background--dark-grey"></div>
                             <p>#314249</p>
                         </div>
+                        <!-- End of example -->
                     </div>
+                    <!-- End of column -->
                     <div class="column sixth">
                         <div class="example swatch">
                             <p>Pink</p>
                             <div class="swatch__circle background--pink"></div>
                             <p>#F16183</p>
                         </div>
+                        <!-- End of example -->
                     </div>
+                    <!-- End of column -->
                     <div class="column sixth">
                         <div class="example swatch">
                             <p>Peach</p>
                             <div class="swatch__circle background--peach"></div>
                             <p>#FE9F82</p>
                         </div>
+                        <!-- End of example -->
                     </div>
+                    <!-- End of column -->
                 </div>
+                <!-- End of row -->
                 <div class="row clearfix">
                     <div class="column sixth">
                         <div class="example swatch">
@@ -201,46 +256,84 @@
                             <div class="swatch__circle background--yellow"></div>
                             <p>#EACD86</p>
                         </div>
+                        <!-- End of example -->
                     </div>
+                    <!-- End of column -->
                     <div class="column sixth">
                         <div class="example swatch">
                             <p>Green</p>
                             <div class="swatch__circle background--green"></div>
                             <p>#5ED789</p>
                         </div>
+                        <!-- End of example -->
                     </div>
+                    <!-- End of column -->
                     <div class="column sixth">
                         <div class="example swatch">
                             <p>Turquoise</p>
                             <div class="swatch__circle background--turquoise"></div>
                             <p>#6AD8CB</p>
                         </div>
+                        <!-- End of example -->
                     </div>
+                    <!-- End of column -->
                     <div class="column sixth">
                         <div class="example swatch">
                             <p>Blue</p>
                             <div class="swatch__circle background--blue"></div>
                             <p>#3870AD</p>
                         </div>
+                        <!-- End of example -->
                     </div>
+                    <!-- End of column -->
                     <div class="column sixth">
                         <div class="example swatch">
                             <p>Purple</p>
                             <div class="swatch__circle background--purple"></div>
                             <p>#9377DF</p>
                         </div>
+                        <!-- End of example -->
                     </div>
+                    <!-- End of column -->
                     <div class="column sixth">
                         <div class="example swatch">
                             <p>Warm Grey</p>
                             <div class="swatch__circle background--warm-grey"></div>
                             <p>#898681</p>
                         </div>
+                        <!-- End of example -->
                     </div>
+                    <!-- End of column -->
                 </div>
+                <!-- End of row -->
             </div>
+            <!-- End of container -->
+        </section>
+        <section>
+            <div class="container">
+                <div class="row clearfix">
+                    <div class="column">
+                        <p>© Leadin 2016</p>
+                    </div>
+                    <!-- End of column -->
+                </div>
+                <!-- End of row -->
+            </div>
+            <!-- End of container -->
         </section>
     </main>
+    <footer role="contentinfo">
+        <div class="container background--light-grey">
+            <div class="row clearfix">
+                <div class="column">
+                    <h2 class="heading--large">Images</h2>
+                </div>
+                <!-- End of column -->
+            </div>
+            <!-- End of row -->
+        </div>
+        <!-- End of container -->
+    </footer>
 </body>
 
 </html>
