--- a/index.html
+++ b/index.html
@@ -313,7 +313,43 @@
             <div class="container">
                 <div class="row clearfix">
                     <div class="column">
-                          <h2 class="heading--large">Images</h2>
+                        <h2 class="heading--large">Images</h2>
+                        <p class="font--padding-bottom">Photos and images should be colourful, professional, elegant , clear, tells a story and humane.</p>
+                    </div>
+                    <!-- End of column -->
+                </div>
+                <!-- End of row -->
+                <div class="row clearfix">
+                    <div class="column third">
+                        <div class="example example--no-border">
+                          <div class="filter">
+                              <div class="filter__layer filter__layer--windmill"></div>
+                          </div>
+                            <p class="example__caption">Preferred style: clean, levels/curves adjusted.</p>
+                        </div>
+                        <!-- End of example -->
+                    </div>
+                    <!-- End of column -->
+                    <div class="column third">
+                        <div class="example example--no-border">
+                          <div class="filter">
+                              <div class="filter__layer filter__layer--windmill"></div>
+                              <div class="filter__layer filter__layer--multiply background--yellow"></div>
+                          </div>
+                            <p class="example__caption">Alternative style A: with multiply color layer.</p>
+                        </div><!-- End of layerz -->
+                        <!-- End of example -->
+                    </div>
+                    <!-- End of column -->
+                    <div class="column third">
+                        <div class="example example--no-border">
+                          <div class="filter">
+                              <div class="filter__layer filter__layer--grayscale filter__layer--windmill"></div>
+                              <div class="filter__layer filter__layer--multiply background--yellow"></div>
+                          </div>
+                            <p class="example__caption">Alternative style B: with grayscale layer &amp; multiply color layer.</p>
+                        </div>
+                        <!-- End of example -->
                     </div>
                     <!-- End of column -->
                 </div>
